デザイン変更に伴う修正

--- a/_assets/ejs/index.ejs
+++ b/_assets/ejs/index.ejs
@@ -5,20 +5,23 @@
 <%- include('./parts/_p-modal') %>
 
 <main>
-  <!-- MV -->
+  <!-- fixed -->
   <%- include('./parts/_p-fixed') %>
 
   <!-- MV -->
   <%- include('./parts/_p-mv') %>
 
+  <!-- Cover -->
+  <%- include('./parts/_p-cover') %>
+
   <!-- メッセージ -->
   <%- include('./parts/_p-lead') %>
 
-  <!-- e.CYCLE -->
-  <%- include('./parts/_p-model') %>
-
   <!-- ご参加いただくメリット -->
   <%- include('./parts/_p-merit') %>
+
+  <!-- e.CYCLE -->
+  <%- include('./parts/_p-model') %>
 
   <!-- パートナー地域 -->
   <%- include('./parts/_p-partner') %>
