--- a/_assets/ejs/parts/_c-request-btn.ejs
+++ b/_assets/ejs/parts/_c-request-btn.ejs
@@ -3,7 +3,7 @@
 
 
 <p class="c-request-btn__annotation js fadein scroll_up">
-  お問合せ後、担当者から<br class="u-hidden-pc">ご連絡させていただきます
+  弊社担当者からご連絡させていただきます。
 </p>
 
 
