--- a/_assets/ejs/parts/_p-lead.ejs
+++ b/_assets/ejs/parts/_p-lead.ejs
@@ -1,18 +1,23 @@
   <section class="p-lead">
     <div class="p-lead__inner l-inner">
-      <h2 class="p-lead__title js fadein scroll_up">
-        再エネをお得に、地域のために
+      <h2 id="lead" class="p-lead__title js fadein scroll_up">
+        入札に参加して、再エネをお得に。
       </h2>
         <p class="p-lead__text js fadein scroll_up">
-          「2050ゼロカーボンちよだ」実現に向け、<br class="u-hidden-sp">
-          連携自治体である秋田県五城目町、群馬県嬬恋村、岐阜県高山市の<br class="u-hidden-sp">
-          再エネ発電施設を活用し、千代田区内の事業者の皆様へ<br class="u-hidden-sp">
-          再生可能エネルギーの供給を行います。<br>
-          <br class="u-hidden-sp">
-          連携自治体の再エネ発電所のみなさま、<br class="u-hidden-sp">
-          電気を販売する小売電気事業者のみなさま、<br class="u-hidden-sp">
-          千代田区内の再エネ電力を活用したい事業者の<br class="u-hidden-sp">
-          みなさまの募集を開始いたします。
+          e.CYCLE (いいサイクル) が千代田区に新登場です。<br>
+          千代田区内の再エネ電力を活用したい事業者のみなさま、<br class="u-hidden-sp">再エネ発電所のオーナーのみなさま、<br class="u-hidden-sp">千代田区に電気を販売したい小売電気事業者のみなさまの募集を開始いたします。<br><br>
+          「2050ゼロカーボンちよだ」の実現に向け、<br class="u-hidden-sp">秋田県五城目町、群馬県嬬恋村、岐阜県高山市の再エネ発電施設を活用し、<br class="u-hidden-sp">地域を活性化しながら千代田区内の事業者の皆様へ再生可能エネルギーの供給を行います。
         </p>
+        
+        
+        
+        
+        
+        
+        
+        
+
+
+
     </div>
   </section>
