--- a/_assets/ejs/parts/_p-merit.ejs
+++ b/_assets/ejs/parts/_p-merit.ejs
@@ -1,11 +1,10 @@
 
-<section class="p-merit">
+<section id="merit-top" class="p-merit">
   <div class="l-inner">
-    <div id="p-merit" class="p-merit__inner">
+    <div class="p-merit__inner">
       <h2 class="c-common-title font-color3  js fadein scroll_up">
         ご参加いただく<br class="u-hidden-pc js fadein scroll_up">メリット
-      </h2>
-
+      </h2>  
       <div class="p-merit__wrapper js fadein scroll_up">
 
         <div class="p-merit__tabbox">
@@ -13,9 +12,9 @@
             <li data-url="#merit" class="p-merit__tab js-tab current">
               千代田区内の<br class="u-hidden-sp">事業者のみなさま
             </li>
-            <li data-url="#merit" class="p-merit__tab js-tab">
+            <!-- <li data-url="#merit" class="p-merit__tab js-tab">
               再エネ発電所の<br class="u-hidden-sp">みなさま
-            </li>
+            </li> -->
             <li data-url="#merit" class="p-merit__tab js-tab">
               小売電気事業者の<br class="u-hidden-sp">みなさま
             </li>
@@ -26,7 +25,7 @@
               <!-- tab01 -->
               <%- include('./_p-merit_tab01') %>
               <!-- tab02 -->
-              <%- include('./_p-merit_tab02') %>
+              <!-- <%% include('./_p-merit_tab02') %> -->
               <!-- tab03 -->
               <%- include('./_p-merit_tab03') %>
 
@@ -37,9 +36,9 @@
             <li data-url="#merit" class="p-merit__tab js-tab current">
               千代田区内の<br class="u-hidden-sp">事業者のみなさま
             </li>
-            <li data-url="#merit" class="p-merit__tab js-tab">
+            <!-- <li data-url="#merit" class="p-merit__tab js-tab">
               再エネ発電所の<br class="u-hidden-sp">みなさま
-            </li>
+            </li> -->
             <li data-url="#merit" class="p-merit__tab js-tab">
               小売電気事業者の<br class="u-hidden-sp">みなさま
             </li>
