--- a/_assets/ejs/parts/_p-merit_tab01.ejs
+++ b/_assets/ejs/parts/_p-merit_tab01.ejs
@@ -3,7 +3,7 @@
   <div class="p-merit__chiyoda">
     <%# メリット %>
     <div class="p-merit__value p-value">
-      <h3 class="c-common-title font-color2 js fadein scroll_up">
+      <h3 class="p-merit__title c-common-title font-color2 js fadein scroll_up">
         お得で簡単、<br class="u-hidden-pc">再エネ切替え！
       </h3>
       <%- include('./_p-value__list', {tab_no: 0}) %>
@@ -11,13 +11,13 @@
     </div>
     <div class="p-value__annotation  js fadein scroll_up">
       <p>
-        ※1 RE100等の証明には再エネ指定の環境価値を示す証書を購入する必要があります。
+        ※1 入札によって価格は変動する可能性があります。
       </p>
       <p>
-        ※2 入札によって価格は変動する可能性があります。
+        ※2 本事業では基本的にFIT電気を取扱います。
       </p>
       <p>
-        ※3 本事業では基本的にFIT電気を取扱います。
+        ※3 RE100等の証明には再エネ指定の環境価値を示す証書を購入する必要があります。
       </p>
       <br>
       <p>
@@ -58,8 +58,7 @@
       </div>
       <div class="u-hidden-pc">
         <p>
-          <img class="lazyload" src="../img/svg/logo.svg" alt="e.cycle">
-          の
+          <img class="lazyload" src="../img/svg/logo.svg" alt="e.cycle">の
         </p>
         <p>入札に参加して</p>
         <p>いい再エネを使おう！</p>
