--- a/_assets/ejs/parts/_p-merit_tab03.ejs
+++ b/_assets/ejs/parts/_p-merit_tab03.ejs
@@ -3,8 +3,8 @@
   <div class="p-merit__chiyoda">
     <%# メリット %>
     <div class="p-merit__value p-value">
-      <h3 class="c-common-title font-color2   js fadein scroll_up">
-        環境意識が高い事業者と出会える！
+      <h3 class="p-merit__title c-common-title font-color2   js fadein scroll_up">
+        環境意識が高い<br class="u-hidden-pc">事業者と出会える！
       </h3>
       <%- include('./_p-value__list', {tab_no: 2}) %>
     </div>
@@ -12,17 +12,15 @@
       <div class="u-hidden-sp">
         <p>
           <img class="lazyload" src="../img/svg/logo.svg" alt="e.cycle">
-          の入札に参加して
+          に参加して
         </p>
-        <p>いい再エネを使おう！</p>
+        <p>いい再エネを広げよう！</p>
       </div>
       <div class="u-hidden-pc  js fadein scroll_up">
         <p>
-          <img class="lazyload" src="../img/svg/logo.svg" alt="e.cycle">
-          の
+          <img class="lazyload" src="../img/svg/logo.svg" alt="e.cycle">に参加して
         </p>
-        <p>入札に参加して</p>
-        <p>いい再エネを使おう！</p>
+        <p>いい再エネを広げよう！</p>
       </div>
     </div>
     <%# ボタン %>
