--- a/_assets/ejs/parts/_p-model.ejs
+++ b/_assets/ejs/parts/_p-model.ejs
@@ -1,12 +1,13 @@
 
-  <section class="p-model ">
+  <section id="ecycle" class="p-model l-model">
     <div class="p-model__inner js-cycle-trigger">
-      <div id="ecycle" class="p-model__copybox">
-        <p class="p-model__copy">再エネの地域共生モデル</p>
-          <img class="lazyload" src="/img/svg/logo.svg" alt="e.cycle">         
+      <div class="p-model__copybox">
+        <p class="p-model__copy">再エネで地域共生を！</p>
+          <img class="lazyload" src="/img/svg/logo.svg" 
+          alt="e.cycle">
+          <p class="p-model__copy-under">いいサイクル</p>
       </div>
-      <div class="p-model__cycle">
-        <!-- <img class="lazyload js-cycle" src="/img/svg/circle.svg" alt="いいサイクル"> -->
+      <!-- <div class="p-model__cycle">
         <div class="p-model__cycle-img scroll_up">
           <img class="lazyload js-cycle" src="/img/svg/circle_1.svg" alt="いいサイクル">
         </div>
@@ -16,7 +17,7 @@
         <div class="p-model__cycle-img scroll_up">
           <img class="lazyload js-cycle" src="/img/svg/circle_3.svg" alt="いいサイクル">
         </div>
-      </div>
+      </div> -->
       <div class="p-model__img">
         <% 
           for (var i = 0; i < 8; i++) { 
@@ -32,7 +33,7 @@
           いい循環をつくります
         </h2>
         <p class="p-model__text js fadein scroll_up">
-          連携自治体の再エネ発電所の電気をまち未来製作所が集めて、電力会社に入札を行います。その売上の一部から地域活性化資金を創出し、具体的なプロジェクトを通して地域を元気にします。千代田区と連携自治体の再エネ発電所で、いい共生関係を築きます。
+          e.CYCLEとは：再生可能エネルギーを地域と直接つなぐ、新しい電力流通の仕組みです。連携自治体の再エネ発電所の電気をまち未来製作所が集めて、電力会社に入札を行います。その売上の一部から地域活性化資金を創出し、地域を元気にします。
         </p>
       </div>
     </div>
