--- a/_assets/ejs/parts/_p-partner.ejs
+++ b/_assets/ejs/parts/_p-partner.ejs
@@ -1,34 +1,34 @@
-<div class="l-partner p-partner ">
+<div id="partner" class="l-partner p-partner ">
   <div class="l-inner js-map-trigger">
     <div class="p-partner__wrapper">
-      <div id="partner" class="p-partner__textbox">
+      <div class="p-partner__textbox">
         <div class="u-hidden-pc">
           <div class="p-partner__copy c-ecycle-copy js fadein scroll_up">
             <p>
               <img class="lazyload" src="../img/svg/logo.svg" alt="e.cycle">
             </p>
             <p>
-              千代田の
+              千代田に電力を
             </p>
-            <p>パートナー地域</p>
+            <p>供給する地域</p>
           </div>
         </div>
         <div class="u-hidden-sp">
           <div class="p-partner__copy c-ecycle-copy js fadein scroll_up">
             <p>
               <img class="lazyload" src="../img/svg/logo.svg" alt="e.cycle">
-              千代田の
+              千代田に
             </p>
-            <p>パートナー地域</p>
+            <p>電力を供給する地域</p>
           </div>
         </div>
         <p class="p-partner__text js fadein scroll_up">
-          連携自治体の再エネ発電所の電気をまち未来製作所が集めて、電力会社に入札を行います。その売上の一部から地域活性化資金を創出し、具体的なプロジェクトを通して地域を元気にします。千代田区と連携自治体の再エネ発電所で、いい共生関係を築きます。
+          e.CYCLE千代田では、千代田区が秋田県五城目町、群馬県嬬恋村、岐阜県高山市と「2050年脱炭素社会実現に向けた連携協定」を結び、再エネ電力をe.CYCLE千代田に参加される事業者へ供給し、千代田区での再生可能エネルギーの利用拡大を図ります。またe.CYCLE千代田にご参加いただく再エネ発電所を募集し、新たな再エネ電力の創出を目指します。
         </p>
       </div>
       <div class="p-partner__img">
-        <img class="lazyload js-map scroll_up" src="/img/svg/map_1.svg" alt="e.cycle千代田パートナー地域">
-        <img class="lazyload js-map scroll_up" src="/img/svg/map_2.svg" alt="e.cycle千代田パートナー地域">
+        <img class="lazyload js-map scroll_up" src="/img/common/map_1.png" alt="e.cycle千代田パートナー地域">
+        <img class="lazyload js-map scroll_up" src="/img/common/map_2.png" alt="e.cycle千代田パートナー地域">
         <!-- <img class="lazyload" src="/img/common/japan_1.png" alt="e.cycle千代田パートナー地域">
         <img class="lazyload" src="/img/common/japan_2.png" alt="e.cycle千代田パートナー地域"> -->
       </div>
