--- a/_assets/ejs/parts/_p-request.ejs
+++ b/_assets/ejs/parts/_p-request.ejs
@@ -1,10 +1,10 @@
 <div class="l-request p-request">
   <div class="p-request__inner"></div>
   <div class="l-inner p-request__wrapper">
+    <p class="c-common-title js fadein scroll_up">
+      地域を元気にする再エネを<br>お得に使いましょう！
+    </p>
     <div class="p-request__box">
-      <p class="c-common-title font-color1 js fadein scroll_up">
-        地域を元気にする<br class="u-hidden-pc">再エネを<br class="u-hidden-sp">お得に<br class="u-hidden-pc">使いましょう！
-      </p>
       <%# ボタン %>
       <%- include('./_c-request-btn') %>
     </div>
