--- a/_assets/ejs/parts/_p-merit_tab02.ejs
+++ b/_assets/ejs/parts/_p-merit_tab02.ejs
@@ -2,27 +2,25 @@
 <div class="p-merit__contentbox js-content">
   <div class="p-merit__chiyoda">
     <%# メリット %>
+    <h3 class="p-merit__title c-common-title font-color2  js fadein scroll_up">
+      発電所立地地域と<br class="u-hidden-pc">いい関係を築けます！
+    </h3>
     <div class="p-merit__value p-value">
-      <h3 class="c-common-title font-color2  js fadein scroll_up">
-        地域とwin-winの関係へ！
-      </h3>
       <%- include('./_p-value__list', {tab_no: 1}) %>
     </div>
     <div class="p-merit__copy c-ecycle-copy  js fadein scroll_up">
       <div class="u-hidden-sp">
         <p>
           <img class="lazyload" src="../img/svg/logo.svg" alt="e.cycle">
-          の入札に参加して
+          に参加して
         </p>
-        <p>いい再エネを使おう！</p>
+        <p>地域とつながろう！</p>
       </div>
       <div class="u-hidden-pc js fadein scroll_up">
         <p>
-          <img class="lazyload" src="../img/svg/logo.svg" alt="e.cycle">
-          の
+          <img class="lazyload" src="../img/svg/logo.svg" alt="e.cycle">に参加して
         </p>
-        <p>入札に参加して</p>
-        <p>いい再エネを使おう！</p>
+        <p>地域とつながろう！</p>
       </div>
     </div>
     <%# ボタン %>
