--- a/_assets/scss/object/component/_c-request-btn.scss
+++ b/_assets/scss/object/component/_c-request-btn.scss
@@ -28,6 +28,7 @@ c-request-btn
   letter-spacing: 0.02em;
   margin-top: 2rem;
   text-align: center;
+  color: $font-color2;
   @include sp{
    font-size: 1.4rem; 
   }
