--- a/_assets/scss/object/project/_p-merit.scss
+++ b/_assets/scss/object/project/_p-merit.scss
@@ -8,12 +8,50 @@ p-merit
 .p-merit{
   position: relative;
   z-index: -1;
-  padding-top: max(13rem, 21vw);
+  padding-top: max(13rem, 17.5vw);
   padding-bottom: max(13rem, 30vw);
   @include sp{
+    padding-top: max(15rem, 17.5vw);
     padding-bottom: min(21rem,40vw);
   }
 }
+
+// .p-merit::after{
+//   content: "";
+//   position: absolute;
+//   top: 50%;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   background: $bg-color6-op;
+//     background-image: url(../img/common/kv_blur.jpg);
+//   z-index: -3;
+//   // background-repeat: no-repeat;
+//   position: fixed;
+// filter: brightness(80%) blur(10px);
+// }
+
+// .p-merit::after{
+//   content: "";
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   background-image: url(../img/common/kv_blur.jpg);
+//   z-index: -3;
+//   width: 100%;
+//   height: 100;
+//   background-repeat: no-repeat;
+//   background-size: cover;
+//   background-position: center;
+//   display: block;
+//   position: fixed;
+//   @include sp{
+//     background: url(..//img/common/kv_blur_sp.jpg);
+//     background-repeat: no-repeat;
+//     background-size: cover;
+//     background-position: center;
+//     }
+// }
 
 .p-merit__contentbox{
   width: 62rem;
@@ -22,8 +60,13 @@ p-merit
   display: none;
 }
 
+.p-merit__title{
+  margin-left: -5rem;
+  margin-right: -5rem;
+}
+
 .p-merit__copy{
-  margin-top: 9rem;
+  margin-top: 8rem;
   @include sp{
     display: flex;
     flex-direction: column;
@@ -37,6 +80,7 @@ p-merit
   display: flex;
   justify-content: center;
   align-items: center;
+  letter-spacing: 0.04em;
   // display: inline;
   // display: block;
   @include sp{
@@ -68,9 +112,11 @@ p-merit
   }
 }
 .p-merit__inner{
+  padding-top: 5rem;
     position: relative;
     @include sp{
-      padding-bottom: 8rem;
+      padding-top: 4.5rem;
+      padding-bottom: 6rem;
     }
   // }
 }
@@ -95,7 +141,6 @@ p-merit
 }
 
 .p-merit__inner::after{
-  // @include max(1200){
     content: "";
     background: url(..//img/common/white-bottom.png);
     position: absolute;
@@ -107,7 +152,7 @@ p-merit
     background-size:contain;
     background-position:top;
     background-repeat: no-repeat;
-    bottom: -51.5vw;
+    bottom: -55.5vw;
     box-sizing: border-box;
     // border-top: 1px solid $border-color1;
     border: none;
@@ -144,7 +189,8 @@ p-merit
 }
 
 .p-merit__tab{
-  width: 31.915%;
+  // width: 31.915%;
+  width: calc(50% - 2rem);
   // color: $font-color1;
   color: $font-color1-op;
   // opacity: 0.5;
@@ -152,10 +198,10 @@ p-merit
   display: block;
   text-align: center;
   padding: 3.5rem 0;
-  font-size: 2.6rem;
+  font-size: 2.4rem;
   font-weight: 700;
   letter-spacing: 0.04em;
-  line-height: 1.3;
+  line-height: 1.5;
   position: relative;
   z-index: 10000;
   cursor: pointer;
@@ -163,9 +209,9 @@ p-merit
   box-sizing: border-box;
   @include sp{
     width: 100%;
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     background: $bg-color1;
-    padding: 1.8rem 0;
+    padding: 1.4rem 0;
     margin-top: 1rem;
     border: 1px solid $border-color2;
   }
@@ -245,19 +291,19 @@ opacity: 1;
 
 .p-merit__contents{
   background: $bg-color1;
-  padding: 8rem 2rem;
+  padding: 7.5rem 2rem 9.5rem;
   @include sp{
-    padding: 4rem 2rem 3.3rem;
+    padding: 4rem 2rem 5.5rem;
   }
 }
 
 .p-merit__wrapper{
   width: 100%;
-  margin-top: 8rem;
+  margin-top: 7.5rem;
   @include sp{
     background: $bg-color1;
-    padding: 2rem 0;
+    padding: 2rem 0 2rem;
     border-radius: 2rem;
-    margin-top: 4rem;
+    margin-top: 3.5rem;
   }
 }
