--- a/_assets/scss/object/project/_p-partner.scss
+++ b/_assets/scss/object/project/_p-partner.scss
@@ -11,21 +11,47 @@ p-partner
   // position: relative;
 }
 .p-partner__wrapper{
-  margin-top: 9rem;
-  display: flex;
-    padding-bottom: 18rem;
+  border-top: 1px solid $border-color2;
+padding-top: 8rem;
+  width: 78rem;
+  margin: 0 auto;
+  // display: flex;
+  padding-bottom: 8rem;
+  @include max(1240){
+    border-image: linear-gradient(to right,
+	  transparent 0% 10%,
+		$border-color2 10% 90%,
+    transparent 90% 100%
+	);
+  border-image-slice: 1;
+}
   @include sp{
-    flex-direction: column;
+    width: 100%;
+    padding-bottom: 5.8rem;
+    border: none;
   }
 }
 
 .p-partner__textbox{
-  width: 38rem;
-  max-width: 100%;
+  // width: 38rem;
+  max-width: 43vw;
+  width: 63rem;
+  // max-width: 100%;
+  margin: 0 auto;
   @include sp{
-    margin-top: 3.3rem;
+    // width: 63rem;
+    max-width: 100%;
+    margin-top: 10rem;
   }
 }
+
+.p-partner__copy{
+  text-align: center;
+  @include sp{
+    text-align: left;
+  }
+}
+
 .p-partner__copy p{
   @include sp{
     display: block;
@@ -42,14 +68,19 @@ p-partner
   line-height: 1.75;
   letter-spacing: 0.05em;
   padding-top: 2.8rem;
+  color: $font-color2;
+  font-weight: 500;
 }
 
 .p-partner__img{
   position: relative;
-  width: 81.8rem;
+  width: 72.5rem;
   max-width: 100%;
-  height: 61rem;
-  margin-left: -25.8rem;
+  height: 54rem;
+  margin-top: 3rem;
+  margin-left: 1.5rem;
+  // margin-left: -25.8rem;
+  // margin: 0 auto;
   @include sp{
     display: block;
     margin: initial;
