--- a/_assets/scss/object/project/_p-request.scss
+++ b/_assets/scss/object/project/_p-request.scss
@@ -12,7 +12,7 @@ p-request
   background-size: cover;
   position: relative;
   @include sp{
-    height: 89.33vw;
+    height: 73.33vw;
     background-size: cover;
   }
 }
@@ -59,13 +59,14 @@ p-request
   margin: 0 auto;
   @include sp{
     padding:  0 2rem;
+    // max-width: 100%;
   }
 }
 
 .p-request .c-request-btn{
   margin-top: 4rem;
   @include sp{
-    margin-top: 1rem;
+    margin-top: 1.5rem;
     width: 100%;
   }
 }
