--- a/_assets/ejs/parts/_p-modal.ejs
+++ b/_assets/ejs/parts/_p-modal.ejs
@@ -17,12 +17,12 @@
               千代田区内の<br>
               事業者のみなさま</a>
             </li>
-            <li class="modal-button">
+            <!-- <li class="modal-button">
               <a href="https://docs.google.com/forms/d/e/1FAIpQLSfTP1Z4U0Gx78zxqvJDPuVaflfFbNnTa6L7atup3-DNM7x10Q/viewform?usp=sf_link" target="_blank">
               再エネ発電所の<br>
                 みなさま
                 </a>
-            </li>
+            </li> -->
             <li class="modal-button">
               <a href="https://docs.google.com/forms/d/e/1FAIpQLSf-zaYTPvyCKtKTJ2o-qo87dujl9e7cMpIo7KjvIYd0VCK3sQ/viewform?usp=sf_link
               " target="_blank">
