--- a/_assets/scss/object/project/_p-modal.scss
+++ b/_assets/scss/object/project/_p-modal.scss
@@ -4,7 +4,6 @@
 /* モーダル */
 .modal-overlay {
   align-items: center;
-  // background: linear-gradient($bg-color2, $bg-color6);
   background: url(..//img/common/kv.jpg);
   background-position: center;
   background-repeat: no-repeat;
@@ -30,7 +29,7 @@
   width: inherit;
   height: inherit;;
   background: linear-gradient(rgba(27,157,184,0.8), rgba(0,158,140, 0.8));
-  // background: linear-gradient($bg-color2, $bg-color6);
+;
 }
 
 .modal-wrapper{
@@ -102,8 +101,6 @@
   position: absolute;
   right: 2rem;
   bottom: 2rem;
-  background:red;
-  // background: url(..//img/svg/arrow-up-right-from-square-solid.svg);
   background: url(..//img/svg/arrow-up-right.svg);
   
   background-size: cover;
@@ -111,7 +108,6 @@
   background-position: center;
   width: 1.4rem;
   height: 1.4rem;
-  // z-index: 10000000000;
 }
 
 .modal-button:last-of-type{
@@ -119,14 +115,9 @@
 }
 
 .modal-container {
-  // background-color: $bg-color6;
-  // max-height: 80vh;
   max-width: 90%;
-  // margin-top: 10rem;
   overflow-y: auto;
-  // padding: 30px;
   width: 94rem;
-  // overflow: hidden;
   max-height: 100vh;
   top: 0;
   @include sp{
@@ -138,12 +129,12 @@
   align-items: center;
   display: flex;
   justify-content: space-between;
-  // margin-top: 20rem;
 }
 
 
 .modal-list{
   display: flex;
+  justify-content: center;
   @include sp{
     flex-direction: column;
   }
