指摘事項修正

--- a/_assets/ejs/parts/_p-merit.ejs
+++ b/_assets/ejs/parts/_p-merit.ejs
@@ -12,12 +12,12 @@
             <li data-url="#merit" class="p-merit__tab js-tab current">
               千代田区内の<br class="u-hidden-sp">事業者のみなさま
             </li>
-            <!-- <li data-url="#merit" class="p-merit__tab js-tab">
-              再エネ発電所の<br class="u-hidden-sp">みなさま
-            </li> -->
             <li data-url="#merit" class="p-merit__tab js-tab">
-              小売電気事業者の<br class="u-hidden-sp">みなさま
+              再エネ発電所の<br class="u-hidden-sp">オーナーのみなさま
             </li>
+            <!-- <li data-url="#merit" class="p-merit__tab js-tab">
+              小売電気事業者の<br class="u-hidden-sp">みなさま
+            </li> -->
           </ul>
 
           <div class="p-merit__contents">
@@ -25,9 +25,9 @@
               <!-- tab01 -->
               <%- include('./_p-merit_tab01') %>
               <!-- tab02 -->
-              <!-- <%% include('./_p-merit_tab02') %> -->
+              <%- include('./_p-merit_tab02') %>
               <!-- tab03 -->
-              <%- include('./_p-merit_tab03') %>
+              <!-- <%- include('./_p-merit_tab03') %> -->
 
           </div><!--p-merit__contents-->
       
@@ -36,12 +36,12 @@
             <li data-url="#merit" class="p-merit__tab js-tab current">
               千代田区内の<br class="u-hidden-sp">事業者のみなさま
             </li>
-            <!-- <li data-url="#merit" class="p-merit__tab js-tab">
-              再エネ発電所の<br class="u-hidden-sp">みなさま
-            </li> -->
             <li data-url="#merit" class="p-merit__tab js-tab">
-              小売電気事業者の<br class="u-hidden-sp">みなさま
+              再エネ発電所の<br class="u-hidden-sp">オーナーのみなさま
             </li>
+            <!-- <li data-url="#merit" class="p-merit__tab js-tab">
+              小売電気事業者の<br class="u-hidden-sp">みなさま
+            </li> -->
           </ul>
         </div>
       </div>
