--- a/_assets/ejs/parts/_p-merit_tab01.ejs
+++ b/_assets/ejs/parts/_p-merit_tab01.ejs
@@ -65,6 +65,8 @@
       </div>
     </div>
     <%# ボタン %>
-    <%- include('./_c-request-btn') %>
+    <a href="https://forms.zohopublic.jp/goodaround/form/Untitled3/formperma/l7kL21Ik8twAMOeHCLe2J-yzrXbhMiG6bzozCSqHN1o" target="_blank" class="c-modal-btn c-request-btn js fadein scroll_up on">
+      お申込みはこちら
+    </a>
   </div>
 </div>
