--- a/_assets/ejs/parts/_p-merit_tab02.ejs
+++ b/_assets/ejs/parts/_p-merit_tab02.ejs
@@ -3,7 +3,7 @@
   <div class="p-merit__chiyoda">
     <%# メリット %>
     <h3 class="p-merit__title c-common-title font-color2  js fadein scroll_up">
-      発電所立地地域と<br class="u-hidden-pc">いい関係を築けます！
+      環境意識が高い<br class="u-hidden-pc">事業者と出会える！
     </h3>
     <div class="p-merit__value p-value">
       <%- include('./_p-value__list', {tab_no: 1}) %>
@@ -14,16 +14,18 @@
           <img class="lazyload" src="../img/svg/logo.svg" alt="e.cycle">
           に参加して
         </p>
-        <p>地域とつながろう！</p>
+        <p>いい再エネを広げよう！</p>
       </div>
       <div class="u-hidden-pc js fadein scroll_up">
         <p>
           <img class="lazyload" src="../img/svg/logo.svg" alt="e.cycle">に参加して
         </p>
-        <p>地域とつながろう！</p>
+        <p>いい再エネを広げよう！</p>
       </div>
     </div>
     <%# ボタン %>
-    <%- include('./_c-request-btn') %>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfTP1Z4U0Gx78zxqvJDPuVaflfFbNnTa6L7atup3-DNM7x10Q/viewform" target="_blank" class="c-modal-btn c-request-btn js fadein scroll_up on">
+      お申込みはこちら
+    </a>
   </div>
 </div>
