--- a/_assets/scss/object/component/_c-request-btn.scss
+++ b/_assets/scss/object/component/_c-request-btn.scss
@@ -12,6 +12,7 @@ c-request-btn
   padding: 1.7rem;
   background: linear-gradient(to bottom right, $bg-color2, $font-color2);
   // background: $bg-color2;
+  text-align: center;
   @include sp{
     margin-top: 4rem;
     padding: 2.2rem;
