--- a/_assets/scss/object/project/_p-partner.scss
+++ b/_assets/scss/object/project/_p-partner.scss
@@ -54,7 +54,15 @@ padding-top: 8rem;
 
 .p-partner__copy p{
   @include sp{
+    // align-items: center;
+    // display: flex;
+    // flex-direction: column;
+    // align-items: center;
+    // justify-content: start;
+    // text-align: left;
     display: block;
+    line-height: 1;
+    padding: 0.875rem 0;
   }
 }
 
