--- a/_assets/scss/object/project/_p-value.scss
+++ b/_assets/scss/object/project/_p-value.scss
@@ -105,3 +105,9 @@ p-value
   color: $font-color2;
   text-decoration: underline;
 }
+
+.p-value__list-img {
+  margin-top: 3rem;
+  width: 100%;
+  height: auto;
+}
