タグを２つから３つに戻す対応

--- a/_assets/ejs/parts/_p-merit.ejs
+++ b/_assets/ejs/parts/_p-merit.ejs
@@ -15,9 +15,9 @@
             <li data-url="#merit" class="p-merit__tab js-tab">
               再エネ発電所の<br class="u-hidden-sp">オーナーのみなさま
             </li>
-            <!-- <li data-url="#merit" class="p-merit__tab js-tab">
+            <li data-url="#merit" class="p-merit__tab js-tab">
               小売電気事業者の<br class="u-hidden-sp">みなさま
-            </li> -->
+            </li>
           </ul>
 
           <div class="p-merit__contents">
@@ -27,7 +27,7 @@
               <!-- tab02 -->
               <%- include('./_p-merit_tab02') %>
               <!-- tab03 -->
-              <!-- <%- include('./_p-merit_tab03') %> -->
+              <%- include('./_p-merit_tab03') %>
 
           </div><!--p-merit__contents-->
       
@@ -39,9 +39,9 @@
             <li data-url="#merit" class="p-merit__tab js-tab">
               再エネ発電所の<br class="u-hidden-sp">オーナーのみなさま
             </li>
-            <!-- <li data-url="#merit" class="p-merit__tab js-tab">
+            <li data-url="#merit" class="p-merit__tab js-tab">
               小売電気事業者の<br class="u-hidden-sp">みなさま
-            </li> -->
+            </li>
           </ul>
         </div>
       </div>
