--- a/_assets/ejs/parts/_p-merit_tab02.ejs
+++ b/_assets/ejs/parts/_p-merit_tab02.ejs
@@ -3,7 +3,7 @@
   <div class="p-merit__chiyoda">
     <%# メリット %>
     <h3 class="p-merit__title c-common-title font-color2  js fadein scroll_up">
-      環境意識が高い<br class="u-hidden-pc">事業者と出会える！
+      発電所立地地域と<br class="u-hidden-pc">いい関係を築けます！
     </h3>
     <div class="p-merit__value p-value">
       <%- include('./_p-value__list', {tab_no: 1}) %>
