--- a/_assets/ejs/parts/_p-merit_tab03.ejs
+++ b/_assets/ejs/parts/_p-merit_tab03.ejs
@@ -20,10 +20,12 @@
         <p>
           <img class="lazyload" src="../img/svg/logo.svg" alt="e.cycle">に参加して
         </p>
-        <p>いい再エネを広げよう！</p>
+        <p>地域とつながろう！</p>
       </div>
     </div>
     <%# ボタン %>
-    <%- include('./_c-request-btn') %>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSf-zaYTPvyCKtKTJ2o-qo87dujl9e7cMpIo7KjvIYd0VCK3sQ/viewform?usp=sf_link" target="_blank" class="c-modal-btn c-request-btn js fadein scroll_up on">
+      お申込みはこちら
+    </a>
   </div>
 </div>
