--- a/_assets/ejs/parts/_p-modal.ejs
+++ b/_assets/ejs/parts/_p-modal.ejs
@@ -23,13 +23,13 @@
               オーナーのみなさま
                 </a>
             </li>
-            <!-- <li class="modal-button">
+            <li class="modal-button">
               <a href="https://docs.google.com/forms/d/e/1FAIpQLSf-zaYTPvyCKtKTJ2o-qo87dujl9e7cMpIo7KjvIYd0VCK3sQ/viewform?usp=sf_link
               " target="_blank">
               小売電気事業者の<br>
               みなさま
               </a>
-            </li> -->
+            </li>
           </ul>
           <a class="modal-etc" href="https://docs.google.com/forms/d/e/1FAIpQLScbi_FP5x7CM2CKQKM25m66zs4QpGnS1RqPDy1OpSnWULYtJQ/viewform
           " target="_blank">その他お問合せはこちら</a>
