--- a/_assets/scss/object/project/_p-merit.scss
+++ b/_assets/scss/object/project/_p-merit.scss
@@ -151,12 +151,12 @@ p-merit
 }
 
 .p-merit__tab{
-  // width: 31.915%;
-  width: calc(50% - 2rem);
+  width: 31.915%;
+  // width: calc(50% - 2rem);
   // color: $font-color1;
-  color: $font-color1-op;
+  color: $font-color2-op;
   // opacity: 0.5;
-  background: $bg-color4;
+  background: $bg-color3;
   display: block;
   text-align: center;
   padding: 3.5rem 0;
