--- a/_assets/scss/setting/_setting.scss
+++ b/_assets/scss/setting/_setting.scss
@@ -22,7 +22,7 @@ $bl02:#00217c;
 $font-color1:#505050;
 $font-color1-op:rgba(50,50,50,0.3);
 $font-color2:#009E8C;
-$font-color3:#FFFFFF;
+$font-color2-op:rgba(0,158,140,0.5);$font-color3:#FFFFFF;
 $font-color3-op:rgba(255,255,255,0.3);
 $font-color4:#D8D8D8;
 $font-color5:#707070;
